...
      />
      <Tabs.Screen
        name="applications"
        options={{
          title: t('tabs.applications'),
          tabBarIcon: ({ color }) => <ApplicationsIcon color={color as string} />,
          tabBarButtonTestID: 'tab-applications',
        }}
      />
      <Tabs.Screen
        name="calendar"
        options={{
          title: t('tabs.calendar'),
...
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: t('tabs.settings'),
          tabBarIcon: ({ color }) => <SettingsIcon color={color as string} />,
          tabBarButtonTestID: 'tab-settings',
        }}
      />
    </Tabs>
  );
}

